--- a/index.html
+++ b/index.html
@@ -1,80 +1,268 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Login</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<html lang="en">
 
-    <link rel="stylesheet" href="css/styles.css">
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Show Time!</title>
+    <link rel="shortcut icon" href="./Images/Logo/Title.jpeg" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./landing-page.js"></script>
+    <!-- Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
-    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <link rel="stylesheet" href="landpage.css">
 
-  </head>
-  <body> 
-    <div class="login-reg-panel">
-    		<div class="login-info-box">
-    			<h2>Have an account?</h2>
-    			<p>Login to your account</p>
-    			<label id="label-register" for="log-reg-show">Login</label>
-    			<input type="radio" name="active-log-panel" id="log-reg-show"  checked="checked">
-    		</div>
+</head>
 
-    		<div class="register-info-box">
-    			<h2>Don't have an account?</h2>
-    			<p>Register Yourself </p>
-    			<label id="label-login" for="log-login-show">Register</label>
-    			<input type="radio" name="active-log-panel" id="log-login-show">
-    		</div>
-        
-    		<div class="white-panel">
-    			<div class="login-show">
-    				<h2>LOGIN</h2>
-    				<input type="text" placeholder="Email" id="Email1" >
-    				<input type="password" placeholder="Password" id="Password1">
-					<input type="button" value="Login" id="submit1">
-    				<a href="">Forgot password?</a>
-    			</div>
-    			<div class="register-show">
-    				<h2>REGISTER</h2>
-    				<input type="text" placeholder="Email" id="Email">
-    				<input type="password" placeholder="Password" id="Password">
-    				<input type="button" value="Register" id="submit">
-    			</div>
-    		</div>
-		
-    	</div>
+<body id="stop-scrolling">
+    <div class="preloader"></div>
 
-	 <center>
-		<div class="mobile-view">
-			
-			<div class="login-show-2">
-				<br><br><br><br>
-				<center><h2>LOGIN</h2>
-					<br><br><br>
-				<input type="text" placeholder="Email">
-				<br><br>
-				<input type="password" placeholder="Password">
-				<br><br>
-				<input type="button" value="Login"><br>
-				<a href=""><div class="forget">Forgot password?</div></a><br> <br>
-			<div class="bottom">	<div class="text">Don't have an account ? </div><div class="reg"><a href="regPageMob.html">register here</a> </div> </div>
-			</div>
+    <div class="text-container">
+        <div class="container-2">
+            <a class="navbar-brand" href="home.html"><img class="logo" src="Images/TheaterLogoFinal - Copy.png" alt=""></a>
+            <div class="intro-container">
+                <h1>WELCOME TO THE<br><span>WORLD OF CINEMA</span></h1>
+                <p>Stream your favourites online.</p>
 
 
-			
-			</div>
+            </div>
+
+            <a href="home.html" class="button">Let's Watch</a>
+        </div>
+
+    </div>
+
+    <div class="images-container">
+        <marquee behavior="alternate" direction="left" scrollamount="8.4"> // marquee - it defines a scrolling area in the HTML document that moves across the page any direction.
+            <div class="group1">
+                <div class="image">
+                    <img src="./Images/super-girl.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/tenet.jpg" alt=""> // The alt attribute specifies an alternate text for an area, if the image cannot be displayed.
+                </div>
+                <div class="image">
+                    <img src="./Images/dangal.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/without-remores.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/along-with-the-gods.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/asoka.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/animal-world.ZW1zLXByZC1hc3NldHMvbW92aWVzL2JjNTBhMTY4LTczZTItNGQxZi05ZmUxLWQwN2ZlNThiZGVkYi53ZWJw" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/bao.jpg.crdownload" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/the-mermaid.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/boss-baby.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/the-eight-hundred.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/Over_the_Moon2020.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/baagi.jpg.crdownload" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/outside-the-wire.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/killerman-french-dvd-movie-cover.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/shadow.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/grown-ups.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/train-to-busan.jpg" alt="">
+                </div>
+                <div class="image">
+                    <img src="./Images/Mulan_(2020_film)_poster.jpg" alt="">
+                </div>
+            </div>
+        </marquee>
 
 
-		</div>
-	 </center>
-		
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-      <script src="js/page.js" charset="utf-8"></script>
-	  <script type="module" src="js/index.js" defer></script>
-	  <script type="module" src="js/login.js" defer></script>
-  </body>
+        <marquee behavior="alternate" direction="right" scrollamount="8.7" scrolldelay="77">
+            <div class="group2">
+                <div class="images2">
+                    <img src="./Images/War_official_poster.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/zootopia_866a1bf2.webp" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/13-assassins-poster-movie.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/Onward_IanBarley-1-702x1024.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/the-little-things.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/Jodhaa_akbar.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/wom.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/John_Wick_TeaserPoster.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/Redcliffposter.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/MonsterHunter_01282021.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/Wolfwakers_key_art_2_3.jpg.crdownload" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/col.jpg.crdownload" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/Zero_official_poster.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/loki.jpg.crdownload" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/capone.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/jiang.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/Justice_Society_World_War_II-359498245-mmed.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/venom.jpg" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/Revenger_(2018).jpg" alt="">
+                </div>
+
+                <div class="images2">
+                    <img src="./Images/the-old-gurd.jpg" alt="">
+                </div>
+
+                <div class="images2">
+                    <img src="./Images/War_official_poster.jpg" alt="">
+                </div>
+
+                <div class="images2">
+                    <img src="./Images/zootopia_866a1bf2.webp" alt="">
+                </div>
+                <div class="images2">
+                    <img src="./Images/13-assassins-poster-movie.jpg" alt="">
+                </div>
+
+            </div>
+        </marquee>
+
+        <marquee behavior="alternate" direction="left" scrollamount="9" scrolldelay="38">
+            <div class="group3">
+                <div class="images3">
+                    <img src="./Images/The_Villainess.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/patton.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/odyssey.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/wizard.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/The_Witch-480212918-mmed.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/top-gun.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/the-marksman.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/chaos-wlaking.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/insight.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/Steel_Rain.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/Tune_in_the_love.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/3-iron.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/Zero_official_poster.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/loki.jpg.crdownload" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/VanquishPoster.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/aotd.jpg.crdownload" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/mk.png" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/misfits.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/karnan.jpg" alt="">
+                </div>
+                <div class="images3">
+                    <img src="./Images/lucid-dream.jpg" alt="">
+                </div>
+            </div>
+        </marquee>
+    </div>
+
+
+    <script>
+        function myFunction() {
+            location.replace('login.html')
+        }
+    </script>
+
+    <script>
+        function preloaderFadeOutInit() {
+            $('.preloader').fadeOut('slow'); // will first fade out the loading animation
+            $('body').attr('id', ''); // will fade out the whole DIV that covers the website.
+        }
+        // Window load function
+        jQuery(window).on('load', function() { // makes sure the whole site is loaded
+            (function($) {
+                preloaderFadeOutInit();
+            })(jQuery);
+        });
+    </script>
+
+</body>
+
 </html>
